<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_deputies"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/menu_deputies" />
        <item
            android:id="@+id/nav_laws"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/menu_laws" />
        <item
            android:id="@+id/nav_depqueries"
            android:icon="@drawable/ic_search_black_18dp"
            android:title="@string/menu_deputies_requests" />
    </group>

    <item android:title="@string/menu_news">
        <menu>
            <item
                android:id="@+id/nav_news_gd"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_news_gd" />
            <item
                android:id="@+id/nav_news_preds"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_news_preds" />
        </menu>
    </item>

    <item android:title="@string/menu_akt">
        <menu>
            <item
                android:id="@+id/nav_akt_pres"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_akt_pres" />
            <item
                android:id="@+id/nav_akt_gover"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_akt_gover" />
            <item
                android:id="@+id/nav_akt_sf"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_akt_sf" />
            <item
                android:id="@+id/nav_akt_gd"
                android:icon="@drawable/ic_rss_feed_black_18dp"
                android:title="@string/menu_akt_gd" />
        </menu>
    </item>

    <item android:title="@string/menu_lists">
        <menu>
            <item
                android:id="@+id/nav_comittee"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_comittee" />
            <item
                android:id="@+id/nav_blocks"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_blocks" />
            <item
                android:id="@+id/nav_otras"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_otras" />
            <item
                android:id="@+id/nav_reg"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_reg" />
            <item
                android:id="@+id/nav_fed"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_fed" />
            <item
                android:id="@+id/nav_stad"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_stad" />
            <item
                android:id="@+id/nav_inst"
                android:icon="@drawable/ic_list_black_18dp"
                android:title="@string/menu_inst" />
        </menu>
    </item>

</menu>
