<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollview_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_deputyrequest_name"
            />

        <LinearLayout
            android:id="@+id/layout_initiator"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/text_initiator"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_deputyrequest_initiator"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_answer"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/text_answer"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_deputyrequest_answer"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_resolution"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/text_resolution"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_deputyrequest_resolution"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_signed"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/text_signedby"
                android:layout_weight="1"
                />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:id="@+id/tv_deputyrequest_signed"
                android:layout_weight="2"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_addressee"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:text="@string/text_addressee"
                android:layout_weight="1"
                />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:id="@+id/tv_deputyrequest_addressee"
                android:layout_weight="2"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>

